# delibasket

./: .pre-commit-config.yaml  Makefile  README.md  setup.cfg
.github/workflows/: main.yml  pre-commit.yml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  createrecipe.py  createsuperuser.py  db.py  load_json.py  main.py  pyproject.toml  req.txt  requirements.txt  services.py  settings.py  setup.cfg
backend-ingredients/: Dockerfile  alembic.ini  pyproject.toml  setup.cfg
backend-ingredients/alembic/versions/: 2023-08-27_06-49_initial.py
backend-ingredients/application/: database.py  exceptions.py  main.py  managers.py  models.py  routers.py  schemas.py  settings.py
backend-ingredients/application/auth/: managers.py  permissions.py  schemas.py
backend-ingredients/application/commands/: load_json.py
backend-ingredients/application/ingredients/: managers.py  models.py  schemas.py  views.py
backend/alembic/: env.py
backend/alembic/versions/: 2023-07-21_586da4896a37.py  2023-07-26_07-21_initial.py  2023-08-17_12-06_initial.py  2023-08-29_07-33_initial.py
backend/application/: database.py  exceptions.py  main.py  managers.py  models.py  routers.py  schemas.py  services.py  settings.py
backend/application/auth/: managers.py  models.py  permissions.py  schemas.py  views.py
backend/application/commands/: __init__.py  createrecipe.py  createsuperuser.py  load_json.py
backend/application/ingredients/: managers.py  models.py  schemas.py  views.py
backend/application/recipes/: api_recipe.py  managers.py  models.py  schemas.py  utils.py  views.py
backend/application/tags/: managers.py  models.py  schemas.py  views.py
backend/application/users/: api_user.py  managers.py  models.py  schemas.py  user_deps.py  utils.py  views.py
backend/commands/: createrecipe.py  createsuperuser.py  load_json.py
backend/migrations/: env.py
backend/migrations/versions/: 1bf071ba95d1_initial.py
backend/recipes/: api.py  api_recipe.py  models.py  schemas.py  utils.py
backend/users/: api.py  api_auth.py  api_user.py  models.py  schemas.py  services.py  user_deps.py  utils.py
docs/: openapi-schema.yml
infra/: .env.template  docker-compose.override.yml  docker-compose.yml  nginx.conf
