[tool.poetry]
name = "delibasket"
version = "0.2.0"
description = "Электронная продуктовая корзина"
authors = ["Смелов Илья <https://github.com/PivnoyFei>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = "3.11"
aiofiles = "^23.1"
alembic = "^1.10"
asyncpg = "^0.27"
bcrypt = "^4.0.1"
fastapi = "^0.100"
fastapi-debug-toolbar = "^0.5.0"
gunicorn = "^20.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0"
redis = "^4.6.0"
sqlalchemy = "^2.0.15"
types-aiofiles = "^23.1.0"
uvicorn = "^0.22"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
wrap_length = 100
include_trailing_comma = true
use_parentheses = true
skip = [".gitignore", ".dockerignore", "alembic"]
extend_skip = ["_version.py", "versioneer.py", "__init__.py"]
extend_skip_glob = ["docs/*", "*venv*/*"]

[tool.black]
line-length = 100
skip-string-normalization = true
extend-exclude = '(.*\/_version.py|.*venv.*\/|.*alembic.*\/.*)'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
